--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         /* ========================================
-        Новый Дизайн "Тетрис" v5.4 - Исправления
+        Новый Дизайн "Тетрис" v5.5 - Полная сборка
         ======================================== */
         :root {
             --bg-gradient-start: #1e1349;
@@ -89,6 +89,99 @@
             max-width: 520px;
         }
         
+        #main-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+        }
+
+        #canvas {
+            width: 240px; /* 12 * 20px */
+            height: 440px; /* 22 * 20px */
+            background-color: rgba(0,0,0,0.3);
+            position: relative;
+            border-radius: 12px;
+            border: 1px solid var(--glass-border);
+            background-image: 
+                linear-gradient(to right, var(--grid-color) 1px, transparent 1px),
+                linear-gradient(to bottom, var(--grid-color) 1px, transparent 1px);
+            background-size: 20px 20px;
+            overflow: hidden;
+            box-shadow: inset 0 0 20px rgba(0,0,0,0.6);
+        }
+
+        /* ========================================
+        Информационная Панель
+        ======================================== */
+        #side-info-panel {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            width: 120px;
+            text-align: center;
+        }
+
+        .info-box {
+            background: var(--glass-bg);
+            border: 1px solid var(--glass-border);
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            border-radius: 12px;
+            padding: 8px 5px;
+            transition: background-color 0.2s;
+        }
+        .info-box p {
+            margin: 0;
+            font-size: 10px;
+            color: var(--text-secondary);
+            text-transform: uppercase;
+            font-weight: 600;
+        }
+        .info-box span {
+            display: block;
+            font-size: 18px;
+            color: var(--text-primary);
+            margin-top: 4px;
+            font-weight: 700;
+        }
+
+        #next_shape {
+            position: relative;
+            width: 100%;
+            height: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        /* ========================================
+        Фигуры и Эффекты
+        ======================================== */
+        .square {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            box-sizing: border-box;
+            border-radius: 4px;
+            /* Анимация (transition) теперь будет отключаться во время спецэффектов */
+            transition: opacity 0.2s, transform 0.2s, top 0.08s linear, left 0.08s linear;
+            box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
+            border: 1px solid rgba(0,0,0,0.3);
+        }
+        .square.ghost { background-color: transparent !important; box-shadow: none; border: 2px solid var(--ghost-color); }
+        .square.line-clear { 
+            /* ИЗМЕНЕНО: Анимация */
+            animation: line-clear-anim 0.4s ease-out forwards;
+            transform-origin: center;
+        }
+        .square.bomb-clear { 
+            /* ИЗМЕНЕНО: Анимация */
+            animation: bomb-clear-anim 0.4s ease-out forwards;
+            transform-origin: center;
+        }
+        .square.blinking { animation: blink 0.8s infinite; }
+
         /* ИЗМЕНЕНО: Более плавная и заметная анимация очистки линии */
         @keyframes line-clear-anim {
             0%   { transform: scale(1) rotate(0deg); opacity: 1; }
