--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@
             */
             /* transition: top 0.08s linear, left 0.08s linear; */
 
+            /* НОВЫЙ ФИКС: Предыдущее решение не сработало. 
+              Вместо `animation` будем использовать `transition`.
+              Это более надежный способ. Мы добавляем transition для
+              opacity и transform, которые будут анимироваться.
+            */
+            transition: opacity 0.4s ease-out, transform 0.4s ease-out;
+            transform-origin: center center; /* Добавим это для надежности */
+
+
             box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
             border: 1px solid rgba(0,0,0,0.3);
         }
@@ -177,7 +186,13 @@
         
         /* Новые анимации */
         .square.fade-out-line { 
-            animation: fadeOutLine 0.4s ease-out forwards;
+            /* НОВЫЙ ФИКС: Убираем `animation` и просто задаем 
+              конечное состояние. `transition` из .square 
+              обработает плавный переход.
+            */
+            /* animation: fadeOutLine 0.4s ease-out forwards; */
+            opacity: 0;
+            transform: scale(0) translateX(var(--translate-x));
             transform-origin: center center;
         }
         .square.bomb-blast { 
@@ -186,11 +201,13 @@
         }
         .square.blinking { animation: blink 0.8s infinite; }
 
+        /*
         @keyframes fadeOutLine {
             0% { opacity: 1; transform: scale(1) translateX(0px); }
             50% { opacity: 0.8; transform: scale(0.8) translateX(var(--translate-x)); }
             100% { opacity: 0; transform: scale(0) translateX(var(--translate-x)); }
         }
+        */
 
         @keyframes bombBlast {
             0% { opacity: 1; transform: scale(1); }
@@ -1071,3 +1088,4 @@
     </script>
 </body>
 </html>
+
