--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <h1>Настройки</h1>
             <div class="modal-body">
                 <div class="settings-item">
-                    <span>Звуки (SFX)</span>
+                    <span>Звуки</span>
                     <label class="toggle-switch">
                         <input type="checkbox" id="sfx-toggle">
                         <span class="slider"></span>
